--- a/views/pages/choose_api.ejs
+++ b/views/pages/choose_api.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/genericHead %>
+<%- include("../partials/genericHead") %>
 <div style="margin:1% 5%;">
   <h1 class="display-4">Please Choose an API</h1>
   <p class="lead">
@@ -19,4 +19,4 @@
   <hr class="my-4">
 
 </div>
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
