--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,5 +1,5 @@
 <% title = "Error" %>
-<% include ../partials/genericHead %>
+<%- include("../partials/genericHead") %>
 
 <h2>Problem: an error occurred</h2>
 <p>Error information:</p>
@@ -21,4 +21,4 @@
 
 <p><a href="/">Continue</a></p>
   
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
