--- a/views/pages/example_done.ejs
+++ b/views/pages/example_done.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/genericHead %>
+<%- include("../partials/genericHead") %>
 
 <h2><%= h1 %></h2>
 <p><%- message %></p>
@@ -15,4 +15,4 @@
 
 <p><a href="/">Continue</a></p>
 
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
