--- a/views/pages/examples/eg014CollectPayment.ejs
+++ b/views/pages/examples/eg014CollectPayment.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>14. Send an envelope with an order form, including a payment field.</h4>
 
@@ -13,13 +13,13 @@
   are used to position the fields in the documents.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
   
   <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <% if (gatewayOk) { %>
   <form class="eg" action="" method="post" data-busy="form">
       <div class="form-group">
@@ -52,5 +52,5 @@
   <p>Problem: please set the <b>DS_PAYMENT_GATEWAY_ID</b> value in the configuration file.</p>
 <% } %>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
 
