--- a/views/pages/examples/eg025PermissionSetUserGroup.ejs
+++ b/views/pages/examples/eg025PermissionSetUserGroup.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>25.  Setting a permission profile.</h4>
 
@@ -6,7 +6,7 @@
     Updates the group name and modifies, or sets, the permission profile for the group.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
@@ -14,7 +14,7 @@
 </p>
 
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form action="" class="eg" method="post" data-busy="form">
     <div class="form-group">
@@ -39,4 +39,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
