--- a/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
+++ b/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>26. Updating individual permission settings</h4>
 <p>
   This code example demonstrates how to edit individual permission settings on a permissions profile with the eSignature REST API.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/code-examples/permission-profile-updating">AccountPermissionProfiles::update</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
@@ -101,4 +101,4 @@
 
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
