--- a/views/pages/examples/eg034UseConditionalRecipients.ejs
+++ b/views/pages/examples/eg034UseConditionalRecipients.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>34. Using conditional recipients</h4>
 <p>
@@ -7,7 +7,7 @@
     The envelope includes a .txt document.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
@@ -17,7 +17,7 @@
     </a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form action="" class="eg" method="post" data-busy="form">
     <div>
@@ -75,4 +75,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
