--- a/views/pages/examples/eg035ScheduledSending.ejs
+++ b/views/pages/examples/eg035ScheduledSending.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>35. Schedule an envelope</h4>
 <p>
     This example demonstrates how to schedule an envelope using the scheduled sending feature.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
