--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -96,4 +96,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.1/anchor.min.js"></script>
 <script>anchors.options.placement = 'left'; anchors.add('h4')</script>
 
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
