--- a/views/pages/index_monitor_examples.ejs
+++ b/views/pages/index_monitor_examples.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/genericHead %>
+<%- include("../partials/genericHead") %>
 <div class="jumbotron jumbotron-fluid">
 
 <table>
@@ -57,4 +57,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.1/anchor.min.js"></script>
 <script>anchors.options.placement = 'left'; anchors.add('h4')</script>
 
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
