--- a/views/pages/admin-examples/eg001CreateUser.ejs
+++ b/views/pages/admin-examples/eg001CreateUser.ejs
@@ -1,11 +1,11 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>1. Create a new active eSignature user</h4>
 <p>
     Demonstrates how to create a new eSignature user and activate their account automatically.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API methods used:
   <a target='_blank' rel='noopener noreferrer'
@@ -16,7 +16,7 @@
     href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/createuser/">eSignUserManagement:createUser</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
@@ -70,4 +70,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
