--- a/views/pages/admin-examples/eg003BulkExportUserData.ejs
+++ b/views/pages/admin-examples/eg003BulkExportUserData.ejs
@@ -1,11 +1,11 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>3. Bulk-export user data</h4>
 <p>
     Demonstrates how to bulk-export user accounts within an organization into a CSV (comma-separated value) file.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
   API methods used:
@@ -15,11 +15,11 @@
     href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/getuserlistexport/">UserExport:getUserListExport</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
