--- a/views/pages/admin-examples/eg005AuditUsers.ejs
+++ b/views/pages/admin-examples/eg005AuditUsers.ejs
@@ -1,11 +1,11 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>5. Audit users</h4>
 <p>
   Demonstrates how to audit the users in your account by retrieving the profiles of users that were modified after a specified date.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API methods used:
   <a target="_blank" rel="noopener noreferrer"
@@ -14,11 +14,11 @@
     href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">eSignUserManagement:getUserProfiles</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
