--- a/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
+++ b/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>7. Retrieve the user's DocuSign profile using a User ID</h4>
 <p>
   Demonstrates how to obtain the user’s DocuSign profile information across all DocuSign accounts by specifying the user’s User ID.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used:
    <a target="_blank" rel='noopener noreferrer' 
         href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfile</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
@@ -25,4 +25,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
