--- a/views/pages/click-examples/eg002ActivateClickwrap.ejs
+++ b/views/pages/click-examples/eg002ActivateClickwrap.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>2. Activate a clickwrap</h4>
 <p>Activates a new clickwrap that you have already created. 
@@ -6,7 +6,7 @@
     your clickwrap before you can use it.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used:
     <a target='_blank'
@@ -16,7 +16,7 @@
     </a>
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <% if (clickwrapsData.clickwraps.length == 0) { %>
     <p>Problem: You do not have clickwraps to activate. Go to example#1 and create one: 
@@ -45,4 +45,4 @@
     </form>
 <% } %>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
