--- a/views/pages/click-examples/eg004ListClickwraps.ejs
+++ b/views/pages/click-examples/eg004ListClickwraps.ejs
@@ -1,11 +1,11 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>4. Get a list of clickwraps</h4>
 <p>
     Gets a list of clickwraps associated with a specific DocuSign user.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used:
     <a target='_blank'
@@ -15,11 +15,11 @@
     </a>
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
