--- a/views/pages/ds_must_authenticate.ejs
+++ b/views/pages/ds_must_authenticate.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/genericHead %>
+<%- include("../partials/genericHead") %>
 <div style="margin:1% 5%;">
   <h1 class="display-4">Please Authenticate with DocuSign</h1>
   <p class="lead">
@@ -17,4 +17,4 @@
   <p>You need to authenticate with DocuSign to continue your request.</p>
 
 </div>
-<% include ../partials/genericFoot %>
+<%- include("../partials/genericFoot") %>
