--- a/views/pages/examples/eg001EmbeddedSigning.ejs
+++ b/views/pages/examples/eg001EmbeddedSigning.ejs
@@ -1,15 +1,16 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
+
 <h4>1. Use embedded signing</h4>
 <p>This example sends an envelope, and then uses embedded signing for the first signer.</p>
 <p>Embedded signing provides a smoother user experience for the signer: the DocuSign signing is initiated from your website.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API methods used:
   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a> and
   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
     <label for="signerEmail">Signer Email</label>
@@ -26,4 +27,4 @@
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
   <button type="submit" class="btn btn-docu">Submit</button>
 </form>
-<% include ../../partials/examplesFoot.ejs %>
+<%- include("../../partials/examplesFoot") %>
