--- a/views/pages/examples/eg003ListEnvelopes.ejs
+++ b/views/pages/examples/eg003ListEnvelopes.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>3. List updated envelopes in the user's account</h4>
 <p>List the envelopes whose status has changed in the last 30 days.</p>
 <p>This example demonstrates how to query DocuSign about envelopes sent by the current user.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
   
   <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/liststatuschanges/">Envelopes::listStatusChanges</a>.
 </p>
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Continue</button>
 </form>
   
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
