--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>8. Create a template</h4>
 <p>Create a template with two roles, <b>signer</b> and <b>cc</b>. 
@@ -11,17 +11,17 @@
 <p>This example first lists the user's templates and only creates a new template if one does not already exist in your account.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
   
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/list/">Templates::list</a>,
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/create/">Templates::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>  
+<%- include("../../partials/gitSource") %>  
   <form class="eg" action="" method="post" data-busy="form">
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <button type="submit" class="btn btn-docu">Continue</button>
   </form>
   
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
