--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>9. Send an envelope using a template</h4>
 <p>The envelope is defined by the template.
@@ -10,12 +10,12 @@
   avoiding the need to make software changes.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <% if (templateOk) { %>
   <p>The template you created via example 8 will be used.</p>
   
@@ -56,4 +56,4 @@
   </form>
 <% } %>
   
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
