--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>10. Send an envelope using binary document transfer</h4>
 <p>The envelope includes a pdf, Word, and HTML document.</p>
@@ -9,13 +9,13 @@
 <p>Since binary transfer is not yet supported by the SDK, this example uses the API directly and 
 demonstrates how to do so.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used: 
   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
@@ -44,4 +44,4 @@ demonstrates how to do so.</p>
     <button type="submit" class="btn btn-docu">Submit</button>
   </form>
   
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
