--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>20. Require Phone Authentication for a Recipient</h4>
 
@@ -12,7 +12,7 @@
 </p>
 
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
   API method used:
@@ -20,7 +20,7 @@
 </p>
 
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
     <label for="countryCode">Signer Country Code</label>
@@ -48,4 +48,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
