--- a/views/pages/examples/eg022KbaAuthentication.ejs
+++ b/views/pages/examples/eg022KbaAuthentication.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 <h4>22. Requiring Knowledge Based Authentication (KBA) for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
@@ -9,7 +9,7 @@
     This is a general example of creating and sending an envelope (a signing request) using KBA for Recipient Authentication.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used: 
  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -18,7 +18,7 @@
 
 <p>The access-code to utilize the example provided is: <strong>NJ9@D1</strong></p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <p>
@@ -40,4 +40,4 @@
       <button type="submit" class="btn btn-docu">Submit</button>
   </form>
 </form>
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
