--- a/views/pages/examples/eg023IdvAuthentication.ejs
+++ b/views/pages/examples/eg023IdvAuthentication.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>23. Requiring Id Verification for a Recipient</h4>
 <p>
@@ -10,14 +10,14 @@
     This is a general example of creating and sending an envelope (a signing request) using ID Verification for Recipient Authentication.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
   <p>
       <strong>Note:</strong> The Access Code for this example is the Signer Name.
@@ -39,4 +39,4 @@
   <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
