--- a/views/pages/examples/eg024CreatePermission.ejs
+++ b/views/pages/examples/eg024CreatePermission.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>24. Creating a permission profile</h4>
 <p>
     This code example demonstrates how to create a permission profile
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/code-examples/permission-profile-creating">AccountPermissionProfiles::create.</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
   <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
@@ -23,4 +23,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
