--- a/views/pages/examples/eg031BulkSendEnvelopes.ejs
+++ b/views/pages/examples/eg031BulkSendEnvelopes.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>31.  Bulk send envelopes</h4>
 
@@ -7,7 +7,7 @@
   it initiates bulk envelope sending.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API methods used:
@@ -19,7 +19,7 @@
 </p>
 
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form action="" class="eg" method="post" data-busy="form">
 
@@ -70,4 +70,4 @@
 </form>
 
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
