--- a/views/pages/examples/eg032PauseSignatureWorkflow.ejs
+++ b/views/pages/examples/eg032PauseSignatureWorkflow.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>32.  Pausing a signature workflow.</h4>
 <p>
@@ -7,7 +7,7 @@
     For resuming a workflow see <a href="eg033">example 33.</a>
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
@@ -17,7 +17,7 @@
     </a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form action="" class="eg" method="post" data-busy="form">
     <div>
@@ -55,4 +55,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
