--- a/views/pages/examples/eg033UnpauseSignatureWorkflow.ejs
+++ b/views/pages/examples/eg033UnpauseSignatureWorkflow.ejs
@@ -1,11 +1,11 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>33. Unpausing a signature workflow</h4>
 <p>
     This example demonstrates how to resume an envelope workflow that has been paused.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
@@ -15,7 +15,7 @@
     </a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <% if (envelopeOk) { %>
     <p>The envelope you created in example 32 will be queried.</p>
@@ -33,4 +33,4 @@
     </form>
 <% } %>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
