--- a/views/pages/examples/eg036DelayedRouting.ejs
+++ b/views/pages/examples/eg036DelayedRouting.ejs
@@ -1,18 +1,18 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>36. Send an envelope with delayed routing</h4>
 <p>
     This example demonstrates how to delay an envelope’s delivery between recipients using the delayed routing feature.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
