--- a/views/pages/examples/eg037SmsDelivery.ejs
+++ b/views/pages/examples/eg037SmsDelivery.ejs
@@ -1,16 +1,16 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>37. Request a signature by SMS delivery</h4>
 <p>Sends a signature request via an SMS message.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
   <p>API method used:
    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
 
   <div class="form-group">
@@ -51,4 +51,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
