--- a/views/pages/examples/eg038ResponsiveSigning.ejs
+++ b/views/pages/examples/eg038ResponsiveSigning.ejs
@@ -1,16 +1,16 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>38. Create a signable HTML document</h4>
 <p>Demonstrates how to create an HTML document for responsive signing.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
   
 <p>API methods used: 
   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a> and
   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
@@ -39,4 +39,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
   
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
