--- a/views/pages/monitor-examples/eg001GetMonitoringData.ejs
+++ b/views/pages/monitor-examples/eg001GetMonitoringData.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>1. Get monitoring data</h4>
 
@@ -6,16 +6,16 @@
   Demonstrates how to get and display all of your organization’s monitoring data.
 </p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API method used:
   <a target='_blank' href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstream/">DataSet::getStream</a>.
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
   <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 
-<% include ../../partials/examplesFoot %>
+<%- include("../../partials/examplesFoot") %>
