--- a/views/pages/rooms-examples/eg002CreateRoomFromTemplate.ejs
+++ b/views/pages/rooms-examples/eg002CreateRoomFromTemplate.ejs
@@ -1,8 +1,8 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 <h4>2. Create a room from template.</h4>
 <p>Create a room from template.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API methods used:
   <a target='_blank' href="https://developers.docusign.com/rooms-api/reference/Roles/Roles/GetRoles">Roles::GetRoles</a>
@@ -12,7 +12,7 @@
   <a target='_blank'
     href="https://developers.docusign.com/rooms-api/reference/RoomTemplates/RoomTemplates/GetRoomTemplates">RoomTemplates::GetRoomTemplates</a>
 </p>
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <% if (templates && templates.length > 0) { %>
   <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
@@ -40,4 +40,4 @@
   </form>
   <% } %>
 
-<% include ../../partials/examplesFoot.ejs %>
+<%- include("../../partials/examplesFoot") %>
