--- a/views/pages/rooms-examples/eg003ExportDataFromRoom.ejs
+++ b/views/pages/rooms-examples/eg003ExportDataFromRoom.ejs
@@ -1,14 +1,14 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 <h4>3. Export data from a room.</h4>
 <p>This example exports data from a room</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>API methods used:
   <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRooms">Rooms::GetRooms</a> and
   <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRoomFieldData">Rooms::GetRoomFieldData</a>.
 </p>
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 <% if (rooms && rooms.length > 0) { %>
 <form class="eg" action="" method="post" data-busy="form">
   
@@ -31,4 +31,4 @@
     <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 <% } %>
-<% include ../../partials/examplesFoot.ejs %>
+<%- include("../../partials/examplesFoot") %>
