--- a/views/pages/rooms-examples/eg007CreateFormGroup.ejs
+++ b/views/pages/rooms-examples/eg007CreateFormGroup.ejs
@@ -1,16 +1,16 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>7. Creating a form group</h4>
 <p>This example demonstrates creating a DocuSign Form Group.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API methods used:
     <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/how-to/create-form-group/">Rooms::CreateFormGroup</a>
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
@@ -21,4 +21,4 @@
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
-<% include ../../partials/examplesFoot.ejs %>
+<%- include("../../partials/examplesFoot") %>
