--- a/views/pages/rooms-examples/eg008GrantOfficeAccessToFormGroup.ejs
+++ b/views/pages/rooms-examples/eg008GrantOfficeAccessToFormGroup.ejs
@@ -1,9 +1,9 @@
-<% include ../../partials/examplesHead %>
+<%- include("../../partials/examplesHead") %>
 
 <h4>8. Grant office access to a form group</h4>
 <p>This example demonstrates how to grant office access to a form group.</p>
 
-<% include ../../partials/docBody %>
+<%- include("../../partials/docBody") %>
 
 <p>
     API methods used:
@@ -12,7 +12,7 @@
     <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/offices/offices/getoffices/">Offices::GetOffices</a>
 </p>
 
-<% include ../../partials/gitSource %>
+<%- include("../../partials/gitSource") %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <% if (formGroups && formGroups.length > 0) { %>
@@ -38,4 +38,4 @@
     <% } %>
 </form>
 
-<% include ../../partials/examplesFoot.ejs %>
+<%- include("../../partials/examplesFoot") %>
