--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -90,6 +90,24 @@
             href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfile</a>
   </p>
 
+  <h4 id="example008">8. <a href="eg008">Update user product permission profiles using an email address</a></h4>
+  <p>Demonstrates how to update user product permission profiles. There may only be one permission profile assigned to a user per product.</p>
+
+  <p>
+      API methods used:
+      <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getproductpermissionprofiles/">MultiProductUserManagement:getProductPermissionProfiles</a>,
+      <a target="_blank" href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/adduserproductpermissionprofilesbyemail/">MultiProductUserManagement:addUserProductPermissionProfilesByEmail</a>
+  </p>
+
+  <h4 id="example009">9. <a href="eg009">Delete user product permission profiles using an email address</a></h4>
+  <p>Demonstrates how to list and delete DocuSign Admin user product permission profiles.</p>
+
+  <p>
+      API methods used:
+      <a target="_blank" href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getuserproductpermissionprofilesbyemail/">MultiProductUserManagement:getUserProductPermissionProfilesByEmail</a>,
+      <a target="_blank" href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/removeuserproductpermission/">MultiProductUserManagement:removeUserProductPermission</a>
+  </p>
+
 </div>
 
 <!-- anchor-js is only for the index page -->
