deleted Thank you

--- a/views/pages/admin-examples/eg008UpdateUserProductPermissionProfile.ejs
+++ b/views/pages/admin-examples/eg008UpdateUserProductPermissionProfile.ejs
@@ -74,8 +74,7 @@
     </script>
 
 <% } else { %>
-    <p>Problem: You do not have the user to change permissions for. Go to <a href="eg002">example 2</a> and create one.
-    </br>Thank you.</p>
+    <p>Problem: You do not have the user to change permissions for. Go to <a href="eg002">example 2</a> and create one.</p>
 
     <form class="eg" action="eg002" method="get">
         <button type="submit" class="btn btn-docu">Continue</button>
