--- a/views/pages/admin-examples/eg009DeleteUserProductPermissionProfile.ejs
+++ b/views/pages/admin-examples/eg009DeleteUserProductPermissionProfile.ejs
@@ -35,8 +35,7 @@
         <button type="submit" class="btn btn-docu">Submit</button>
     </form>
 <% } else { %>
-    <p>Problem: You do not have the user to change permissions for. Go to <a href="eg002">example 2</a> and create one.
-    </br>Thank you.</p>
+    <p>Problem: You do not have the user to change permissions for. Go to <a href="eg002">example 2</a> and create one.</p>
 
     <form class="eg" action="eg002" method="get">
         <button type="submit" class="btn btn-docu">Continue</button>
